fix alignment in direction component

--- a/src/styles/sass/layout/_direction.scss
+++ b/src/styles/sass/layout/_direction.scss
@@ -1,10 +1,5 @@
 .map-wrapper {
-  align-content: center;
-  justify-content: center;
-  text-align: center;
-  vertical-align: middle;
-  position: center;
-  div {
+  .map-container {
     $slider-height: 500px;
     height: calc(min($slider-height, 100vh));
     width: 100%;
